--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="google" content="notranslate">
-  <title>Titulo de la pagina</title>
+  <title>Ejes del Mundo en la Patria</title>
 
   <style>
     body {
